# ApprovalTests.Python.GeoExtensions

./: .coveragerc  .gitignore  Makefile  README.md  git_version_to_pep440.py  setup.cfg  setup.py
.github/workflows/: publish.yml  test_coverage.yml  test_platforms.yml
src/pytest_approvaltests_geo/: __init__.py  compare_geo_tiffs.py  compare_geo_zarr.py  compare_geo_zarrs.py  differ_of_geo_tiffs.py  differ_of_geo_zarrs.py  difference.py  existing_dir_writer.py  factories.py  float_utils.py  geo_io.py  geo_options.py  report_geo_tiffs.py  report_geo_zarrs.py  scrubbers.py  stack_frame_namer_with_external_data_dir.py
src/pytest_approvaltests_geo/comparators/: compare_geo_ncs.py  compare_geo_tiffs.py  compare_geo_zarrs.py
src/pytest_approvaltests_geo/differs/: differ_of_geo_dataset.py  differ_of_geo_ncs.py  differ_of_geo_tiffs.py  differ_of_geo_zarrs.py  difference.py
src/pytest_approvaltests_geo/reporters/: report_geo_ncs.py  report_geo_tiffs.py  report_geo_zarrs.py
tests/: conftest.py  test_approvaltests_geo.py  test_approvaltests_geo_extensions.py  test_compare_geo_ncs.py  test_compare_geo_tiffs.py  test_compare_geo_zarrs.py  test_pixel_stats.py  test_report_geo_ncs.py  test_report_geo_tiffs.py  test_report_geo_zarrs.py  test_scrub_yeoda_metadata.py
tests/helpers/: factories.py
