[metadata]
name = pytest-approvaltests-geo
description = Extension for ApprovalTests.Python specific to geo data verification
author = TU Wien GEO MRS group
author_email = remote.sensing@geo.tuwien.ac.at
long_description = file: README.md
url = https://github.com/TUW-GEO/ApprovalTests.Python.GeoExtensions
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Natural Language :: English

[options]
package_dir =
    = src
packages = find:
py_modules=pytest_approvaltests_geo
install_requires =
    pytest
    approvaltests
    rioxarray
    xarray

[options.packages.find]
where=src

[options.extras_require]
test =
    zarr
    pytest-cov
zarr =
    zarr

[options.entry_points]
pytest11 =
    pytest-approvaltests-geo = pytest_approvaltests_geo